Unpress modifiers on focusOutEvent in VncView

Key combinations like Alt-Tab, Alt-F2, Alt-F3, Alt-F4 or Ctrl-Alt-Delete are
not effective on the remote desktop but local. The remote desktop looses its
focus but pressed modifier keys like Alt, Ctrl, Shift, Meta,... stay pressed,
rendering the remote desktop unusable.

This patch releases the modifier keys on focus loss.

Test: Press key combinations with modifier keys and check that the remote desktop
stays usable, e.g. while connected to a remote desktop, type some text into a
terminal or text application, then press Alt-Tab to change focus to a different
local window. Press Alt-Tab again to switch back to krdc and type some text again.

Without this patch, the Alt modifier is still active on the remote side and typing
text will fail. With the patch applied typing is successful.

Try other modifiers, too, e.g press the Ctrl-key, hold it and mouseclick some other
local window to get focus. Release the Ctrl-key and mouseclick krdc again. Do the
typing test.

Enable KRDC.debug logging and check the "VncView::unpressModifiers key=" message.

BUG: 329951